packages/engine/src/tests/snapshots/engine__tests__partition__broken_empty_sup_align_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      10
    ],
    "items": 5,
    "width": 19.6,
    "height": 11.65,
    "x": -9.79,
    "y": 0.0
  }
]
