packages/engine/src/tests/snapshots/engine__tests__partition__broken_empty_sup_bracket_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 6,
      "end": 7
    },
    "severity": "warning",
    "message": "empty math attachment; inserted `#none`",
    "hints": []
  }
]
