packages/engine/src/tests/snapshots/engine__tests__partition__broken_empty_sup_eof_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      4
    ],
    "items": 6,
    "width": 9.49,
    "height": 18.0,
    "x": 0.0,
    "y": 0.0
  }
]
