packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_after_heading_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      9
    ],
    "items": 4,
    "width": 133.31,
    "height": 44.8,
    "x": 0.0,
    "y": -1.28
  },
  {
    "range": [
      11,
      17
    ],
    "items": 2,
    "width": 36.88,
    "height": 22.4,
    "x": 0.0,
    "y": 60.8
  },
  {
    "range": [
      19,
      46
    ],
    "items": 5,
    "width": 94.64,
    "height": 89.6,
    "x": 0.0,
    "y": 101.12
  }
]
