packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_after_heading_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 17,
      "end": 18
    },
    "severity": "warning",
    "message": "unclosed content block; inserted a closing `]`",
    "hints": []
  }
]
