packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_array_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 2,
    "width": 63.76,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      9,
      15
    ],
    "items": 10,
    "width": 25.42,
    "height": 44.8,
    "x": 0.0,
    "y": 39.68
  },
  {
    "range": [
      17,
      44
    ],
    "items": 5,
    "width": 94.64,
    "height": 89.6,
    "x": 0.0,
    "y": 102.4
  }
]
